@@ -1,3 +1,7 @@
+Unreleased
+----------
+* Fix blank menu item in Group menu.
+
 Beta v0.11.3 (2019-10-07)
 -------------------------
 * Fix failing to save private key to file on Windows
